added scope to package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stylelint-config-novac",
+  "name": "@sertaconay/stylelint-config-novac",
   "version": "0.1.3",
   "author": "Sertaç Onay <sertac@onay.me> (https://sertac.onay.me)",
   "description": "",
