--- a/package.json
+++ b/package.json
@@ -35,5 +35,10 @@
     "np": "^7.6.0",
     "prettier": "^2.5.1",
     "stylelint": "^14.3.0"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint . --fix", "git add"
+    ]
   }
 }
