--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stylelint-config-novac",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "author": "Sertaç Onay <sertac@onay.me> (https://sertac.onay.me)",
   "description": "",
   "main": "index.js",
@@ -38,7 +38,8 @@
   },
   "lint-staged": {
     "*.js": [
-      "eslint . --fix", "git add"
+      "eslint . --fix",
+      "git add"
     ]
   }
 }
